# PluginStandart

./: CMakeLists.txt  PluginStandart.hpp
EventSystem/: Event.hpp  SimpleCommand.hpp
Options/: Color.hpp  Image.hpp  Picture.hpp  Vector2d.hpp
Other/: context.hpp  functions.hpp
Tool/: Tool.hpp
WidgetCreator/: WidgetCreator.hpp
Widgets/: Button.hpp  Editor.hpp  Label.hpp  ScrollBar.hpp  Widget.hpp
include/EventSystem/: Command.hpp  Event.hpp
include/Options/: Color.hpp  Image.hpp  Picture.hpp  Vector2d.hpp
include/Other/: context.hpp  functions.hpp
include/Widgets/: Widget.hpp
src/EventSystem/: Event.cpp
src/Options/: Color.cpp  Picture.cpp  Vector2d.cpp
src/WIdgets/: Widget.cpp
